feat: create user api
