# src/swagger.json
@@ -6,6 +6,89 @@
   },
   "paths": {
     "/api/v1/users": {
+      "post": {
+        "summary": "Create a New User",
+        "tags": [
+          "Users"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "example": "John Doe"
+                  },
+                  "age": {
+                    "type": "integer",
+                    "example": 25
+                  },
+                  "email": {
+                    "type": "string",
+                    "example": "johndoe@email.com"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "User created successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "requestID": {
+                      "type": "string",
+                      "example": "c9b67fb3-4b2b-4e6d-bddd-930d4db12d69"
+                    },
+                    "status": {
+                      "type": "integer",
+                      "example": 201
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "id": {
+                          "type": "integer",
+                          "example": 1
+                        },
+                        "name": {
+                          "type": "string",
+                          "example": "John Doe"
+                        },
+                        "age": {
+                          "type": "integer",
+                          "example": 25
+                        },
+                        "email": {
+                          "type": "string",
+                          "example": "johndoe@email.com"
+                        }
+                      }
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "User created successfully."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input data"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
       "get": {
         "summary": "Get All Users",
         "tags": [
